Everything working on the redesign. Ready for push to master.

--- a/about-me.html
+++ b/about-me.html
@@ -2,86 +2,89 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="images/eyes-icon.ico" type="image/x-icon">
-      <title>wesley klein - me</title>
-      <meta name="author" content="Wesley Klein">
-      <meta name="desciption" content="Information regarding Wesley Klein. This includes a resume, likes, interests, hopes, and other stuff yet to be thought of.">
-      <link rel="stylesheet" href="style.css">
-      <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
+    <title>wesley klein</title>
+    <meta name="author" content="Wesley Klein">
+    <meta name="desciption" content="The personal website of Wesley Klein.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
 
-    <body>
+  <body>
+    <div class="sidenav-wrapper">
+      <a class="nav-option title" href="index.html">Wesley<br/>Klein</a>
       <nav class="sidenav">
-        <div class="nav-title-container">
-          <a href="index.html"><img id="title-image" src="images/my-eyes-name.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
-        </div>
-        <div class="nav-main-container">
-          <button class="dropdown-btn nav-option" style="letter-spacing: 0.95em;">artwork</button>
+        <button class="dropdown-btn nav-option">artwork</button>
+        <div class="dropdown-container clicked">
+          <button class="dropdown-btn nav-option">comics</button>
           <div class="dropdown-container">
-            <button class="dropdown-btn nav-option" style="letter-spacing: 0.845em;">comics</button>
-            <div class="dropdown-container">
-              <a class="nav-option" href="artwork/cyclux.html" style="letter-spacing: 0.55em;">cyclux</a>
-              <a class="nav-option" href="artwork/branches.html" style="letter-spacing: 0.2em;">branches</a>
-            </div>
-            <a class="nav-option" href="artwork/illustrations.html" style="letter-spacing: 0.195em;">illustrations</a>
-            <a class="nav-option" href="artwork/animations.html" style="letter-spacing: 0.274em;">animations</a>
-            <a class="nav-option" href="artwork/photo.html" style="letter-spacing: 1.2em;">photo</a>
+            <a class="nav-option" href="artwork/cyclux.html">cyclux</a>
+            <a class="nav-option" href="artwork/branches.html">branches</a>
           </div>
-          <button class="dropdown-btn nav-option" style="letter-spacing: 0.785em;">projects</button>
-          <div class="dropdown-container">
-            <a class="nav-option" href="projects/linecollection.html" style="letter-spacing: 0.09em;">line collection</a>
-            <a class="nav-option" href="projects/lifesimulator.html" style="letter-spacing: 0.115em;">life simulator</a>
-            <a class="nav-option" href="projects/processing-sketches.html" style="letter-spacing: -0.105em;">processing sketches</a>
-          </div>
-          <a class="nav-option" href="blog.html" style="letter-spacing: 2.362em;">blog</a>
-          <a class="nav-option" href="#" style="letter-spacing: 1.59em;">about</a>
+          <a class="nav-option" href="artwork/illustrations.html">illustrations</a>
+          <a class="nav-option" href="artwork/animations">animations</a>
+          <a class="nav-option" href="artwork/photo.html">photo</a>
         </div>
+        <button class="dropdown-btn nav-option">projects</button>
+        <div class="dropdown-container">
+          <a class="nav-option" href="projects/linecollection.html">line<br/>collection</a>
+          <a class="nav-option" href="projects/lifesimulator.html">life<br/>simulator</a>
+          <a class="nav-option" href="projects/processing-sketches.html">processing<br/>sketches</a>
+        </div>
+        <a class="nav-option" href="blog.html">blog</a>
+        <a class="nav-option" href="about-me.html">about</a>
       </nav>
+      <a href="index.html"><img id="title-image" src="images/my-eyes-name-clear.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
+    </div>
 
-      <nav class="topnav" id="myTopnav">
-        <a href="../index.html" class="logo"><img id="title-image" src="../images/my-eyes-name.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
-        <div class="nav-main-container">
-          <button class="dropdown-btn nav-option" style="letter-spacing: 0.95em;">artwork</button>
+    <div class="topnav-wrapper">
+      <nav class="topnav">
+        <a href="index.html"><img id="title-image" src="images/my-eyes-name-clear.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
+        <button class="dropdown-btn nav-option"><i class="fa fa-bars"></i></button>
+        <div class="dropdown-container main-dropdown">
+          <button class="dropdown-btn nav-option">artwork</button>
           <div class="dropdown-container clicked">
-            <button class="dropdown-btn nav-option" style="letter-spacing: 0.845em;">comics</button>
+            <button class="dropdown-btn nav-option">comics</button>
             <div class="dropdown-container">
-              <a class="nav-option" href="cyclux.html" style="letter-spacing: 0.55em;">cyclux</a>
-              <a class="nav-option" href="branches.html" style="letter-spacing: 0.2em;">branches</a>
+              <a class="nav-option" href="artwork/cyclux.html">cyclux</a>
+              <a class="nav-option" href="artwork/branches.html">branches</a>
             </div>
-            <a class="nav-option" href="#" style="letter-spacing: 0.195em;">illustrations</a>
-            <a class="nav-option" href="animations.html" style="letter-spacing: 0.274em;">animations</a>
-            <a class="nav-option" href="photo.html" style="letter-spacing: 1.2em;">photo</a>
+            <a class="nav-option" href="artwork/illustrations.html">illustrations</a>
+            <a class="nav-option" href="artwork/animations.html">animations</a>
+            <a class="nav-option" href="artwork/photo.html">photo</a>
           </div>
-          <button class="dropdown-btn nav-option" style="letter-spacing: 0.785em;">projects</button>
+          <button class="dropdown-btn nav-option">projects</button>
           <div class="dropdown-container">
-            <a class="nav-option" href="../projects/linecollection.html" style="letter-spacing: 0.09em;">line collection</a>
-            <a class="nav-option" href="../projects/lifesimulator.html" style="letter-spacing: 0.115em;">life simulator</a>
-            <a class="nav-option" href="../projects/processing-sketches.html" style="letter-spacing: -0.105em;">processing sketches</a>
+            <a class="nav-option" href="projects/linecollection.html">line collection</a>
+            <a class="nav-option" href="projects/lifesimulator.html">life simulator</a>
+            <a class="nav-option" href="projects/processing-sketches.html">processing sketches</a>
           </div>
-          <a class="nav-option" href="../blog.html" style="letter-spacing: 2.362em;">blog</a>
-          <a class="nav-option active" href="../about-me.html" style="letter-spacing: 1.59em;">about</a>
+          <a class="nav-option" href="blog.html">blog</a>
+          <a class="nav-option" href="about-me.html">about</a>
         </div>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="fa fa-bars"></i>
-        </a>
       </nav>
+    </div>
 
-      <main class="content">
-        <div class="aboutme-content">
-          <img class="aboutme-img" src="images/self.jpg" alt="Black and white photograph of Wesley Klein.">
+    <main role="main">
+      <div class="about-container">
+        <div class="about-media">
+          <img class="about-image" src="images/self.jpg" alt="Black and white photograph of Wesley Klein.">
+          <div class="icon-container">
+            <a href="images/resume.pdf" title="Download My Resume" class="content-link"><img src="images/cv.png" id="icon"  alt="Icon for resume."></a>
+            <a href="https://github.com/chachoblow" title="My Github" class="content-link"><img src="images/github.png" id="icon"alt="Icon for Github."></a>
+            <a href="https://www.linkedin.com/in/wesleyklein/" title="My Linkedin" class="content-link"><img src="images/linkedin.png" id="icon" alt="Icon for LinkedIn."></a>
+            <a href="https://www.instagram.com/chachoblow" title="My Instagram" class="content-link"><img src="images/instagram.png" id="icon" alt="Icon for Instagram."></a>
+          </div>
+        </div>
+        <div class="about-content">
           <h1>about me</h1>
           <p>Wesley Klein is an artist, maker, builder, and fixer. He completed his mathematics and computer science degree at The University of California, Berkeley. He is seeking oppurtunites within the software engineering field. Specifically, he is interested in virtual reality, agumented reality, creative coding, web design, and in a broad sense, the intersection of art and technology.</p>
           <p>Apart from his studies, he enjoys making small, alternative comics and illustrations. He is currently learning to animate as well. He is highly interested in merging more traditional artistic endevours, such as, drawing and illustration, with new technologies. He is exploring the ways in which microcontrollers, web technologies, virtual reality, and creative coding frameworks can be merged with alternative comics, animation, and drawing. </p>
-          <div style="padding-top:30px">
-            <a href="images/resume.pdf" title="Download My Resume" class="content-link"><img src="images/cv.png" width="60" style="padding:10px" alt="Icon for resume."></a>
-            <a href="https://github.com/chachoblow" title="My Github" class="content-link"><img src="images/github.png" width="60" style="padding:10px" alt="Icon for Github."></a>
-            <a href="https://www.linkedin.com/in/wesleyklein/" title="My Linkedin" class="content-link"><img src="images/linkedin.png" width="60" style="padding:10px" alt="Icon for LinkedIn."></a>
-            <a href="https://www.instagram.com/chachoblow" title="My Instagram" class="content-link"><img src="images/instagram.png" width="60" style="padding:10px" alt="Icon for Instagram."></a>
-          </div>
         </div>
-      </main>
-      <script src="js/dropdown.js"></script>
-      <script src="../js/mobile-menu.js"></script>
-    </body>
+      </div>
+    </main>
+  </body>
+  <script src="js/dropdown.js"></script>
 </html>
+
