--- a/artwork/animations.html
+++ b/artwork/animations.html
@@ -1,87 +1,86 @@
 <!DOCTYPE html>
-<html class="indexpage" lang="en-US">
+<html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="../images/eyes-icon.ico" type="image/x-icon">
-    <title>wesley klein - arrange and watch</title>
-      <meta name="author" content="Wesley Klein">
-      <meta name="desciption" content="The website of Wesley Klein. Here, his various projects, illustrations, comics, and photographs are hosted for your viewing pleasure.">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="../style.css">
-      <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet">
-    </head>
+    <title>wesley klein</title>
+    <meta name="author" content="Wesley Klein">
+    <meta name="desciption" content="The personal website of Wesley Klein.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
 
-    <body>
+  <body>
+    <div class="sidenav-wrapper">
+      <a class="nav-option title" href="../index.html">Wesley<br/>Klein</a>
       <nav class="sidenav">
-        <div class="nav-title-container">
-          <a href="../index.html"><img id="title-image" src="../images/my-eyes-name.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
-        </div>
-        <div class="nav-main-container">
-          <button class="dropdown-btn nav-option" style="letter-spacing: 0.95em;">artwork</button>
-          <div class="dropdown-container clicked">
-            <button class="dropdown-btn nav-option" style="letter-spacing: 0.845em;">comics</button>
-            <div class="dropdown-container">
-              <a class="nav-option" href="cyclux.html" style="letter-spacing: 0.55em;">cyclux</a>
-              <a class="nav-option" href="branches.html" style="letter-spacing: 0.2em;">branches</a>
-            </div>
-            <a class="nav-option" href="illustrations.html" style="letter-spacing: 0.195em;">illustrations</a>
-            <a class="nav-option" href="#" style="letter-spacing: 0.274em;">animations</a>
-            <a class="nav-option" href="photo.html" style="letter-spacing: 1.2em;">photo</a>
-          </div>
-          <button class="dropdown-btn nav-option" style="letter-spacing: 0.785em;">projects</button>
+        <button class="dropdown-btn nav-option">artwork</button>
+        <div class="dropdown-container clicked">
+          <button class="dropdown-btn nav-option">comics</button>
           <div class="dropdown-container">
-            <a class="nav-option" href="../projects/linecollection.html" style="letter-spacing: 0.09em;">line collection</a>
-            <a class="nav-option" href="../projects/lifesimulator.html" style="letter-spacing: 0.115em;">life simulator</a>
-            <a class="nav-option" href="../projects/processing-sketches.html" style="letter-spacing: -0.105em;">processing sketches</a>
+            <a class="nav-option" href="cyclux.html">cyclux</a>
+            <a class="nav-option" href="branches.html">branches</a>
           </div>
-          <a class="nav-option" href="../blog.html" style="letter-spacing: 2.362em;">blog</a>
-          <a class="nav-option" href="../about-me.html" style="letter-spacing: 1.59em;">about</a>
+          <a class="nav-option" href="illustrations.html">illustrations</a>
+          <a class="nav-option" href="animations.html">animations</a>
+          <a class="nav-option" href="photo.html">photo</a>
+        </div>
+        <button class="dropdown-btn nav-option">projects</button>
+        <div class="dropdown-container">
+          <a class="nav-option" href="../projects/linecollection.html">line<br/>collection</a>
+          <a class="nav-option" href="../projects/lifesimulator.html">life<br/>simulator</a>
+          <a class="nav-option" href="../projects/processing-sketches.html">processing<br/>sketches</a>
+        </div>
+        <a class="nav-option" href="../blog.html">blog</a>
+        <a class="nav-option" href="../about-me.html">about</a>
+      </nav>
+      <a href="../index.html"><img id="title-image" src="../images/my-eyes-name-clear.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
+    </div>
+
+    <div class="topnav-wrapper">
+      <nav class="topnav">
+        <a href="../index.html"><img id="title-image" src="../images/my-eyes-name-clear.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
+        <button class="dropdown-btn nav-option"><i class="fa fa-bars"></i></button>
+        <div class="dropdown-container main-dropdown">
+          <button class="dropdown-btn nav-option">artwork</button>
+          <div class="dropdown-container clicked">
+            <button class="dropdown-btn nav-option">comics</button>
+            <div class="dropdown-container">
+              <a class="nav-option" href="cyclux.html">cyclux</a>
+              <a class="nav-option" href="branches.html">branches</a>
+            </div>
+            <a class="nav-option" href="illustrations.html">illustrations</a>
+            <a class="nav-option" href="animations.html">animations</a>
+            <a class="nav-option" href="photo.html">photo</a>
+          </div>
+          <button class="dropdown-btn nav-option">projects</button>
+          <div class="dropdown-container">
+            <a class="nav-option" href="../projects/linecollection.html">line collection</a>
+            <a class="nav-option" href="../projects/lifesimulator.html">life simulator</a>
+            <a class="nav-option" href="../projects/processing-sketches.html">processing sketches</a>
+          </div>
+          <a class="nav-option" href="../blog.html">blog</a>
+          <a class="nav-option" href="../about-me.html">about</a>
         </div>
       </nav>
+    </div>
 
-      <nav class="topnav" id="myTopnav">
-        <a href="../index.html" class="logo"><img id="title-image" src="../images/my-eyes-name.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
-        <div class="nav-main-container">
-          <button class="dropdown-btn nav-option" style="letter-spacing: 0.95em;">artwork</button>
-          <div class="dropdown-container clicked">
-            <button class="dropdown-btn nav-option" style="letter-spacing: 0.845em;">comics</button>
-            <div class="dropdown-container">
-              <a class="nav-option" href="cyclux.html" style="letter-spacing: 0.55em;">cyclux</a>
-              <a class="nav-option" href="branches.html" style="letter-spacing: 0.2em;">branches</a>
-            </div>
-            <a class="nav-option" href="#" style="letter-spacing: 0.195em;">illustrations</a>
-            <a class="nav-option active" href="animations.html" style="letter-spacing: 0.274em;">animations</a>
-            <a class="nav-option" href="photo.html" style="letter-spacing: 1.2em;">photo</a>
-          </div>
-          <button class="dropdown-btn nav-option" style="letter-spacing: 0.785em;">projects</button>
-          <div class="dropdown-container">
-            <a class="nav-option" href="../projects/linecollection.html" style="letter-spacing: 0.09em;">line collection</a>
-            <a class="nav-option" href="../projects/lifesimulator.html" style="letter-spacing: 0.115em;">life simulator</a>
-            <a class="nav-option" href="../projects/processing-sketches.html" style="letter-spacing: -0.105em;">processing sketches</a>
-          </div>
-          <a class="nav-option" href="../blog.html" style="letter-spacing: 2.362em;">blog</a>
-          <a class="nav-option" href="../about-me.html" style="letter-spacing: 1.59em;">about</a>
-        </div>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="fa fa-bars"></i>
-        </a>
-      </nav>
+    <main role="main">
+      <div class="embed-container">
+        <iframe src="https://player.vimeo.com/video/316146671" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
+      <div class="embed-container">
+        <iframe src="https://player.vimeo.com/video/316146770" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
+      <div class="embed-container">
+        <iframe src="https://player.vimeo.com/video/316146757" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
+      <div class="content-info">
+    </main>
+  </body>
 
-      <main class="content">
-        <div class="embed-container">
-          <iframe src="https://player.vimeo.com/video/316146671" class="video" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        </div>
-        <div class="embed-container">
-          <iframe src="https://player.vimeo.com/video/316146770" class="video" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        </div>
-        <div class="embed-container">
-          <iframe src="https://player.vimeo.com/video/316146757" class="video" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        </div>
-        <div class="content-info">
-          
-        </div>
-      </main>
-      <script src="../js/dropdown.js"></script>
-      <script src="../js/mobile-menu.js"></script>
-    </body>
+  <script src="../js/dropdown.js"></script>
+  
 </html>
+
