--- a/artwork/photo.html
+++ b/artwork/photo.html
@@ -1,87 +1,100 @@
 <!DOCTYPE html>
-<html class="photopage" lang="en-US">
+<html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="../images/eyes-icon.ico" type="image/x-icon">
-      <title>wesley klein - photo</title>
-      <meta name="author" content="Wesley Klein">
-      <meta name="desciption" content="Collection of photographs taken by Wesley Klein.">
-      <link rel="stylesheet" href="../style.css">
-      <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
+    <title>wesley klein</title>
+    <meta name="author" content="Wesley Klein">
+    <meta name="desciption" content="The personal website of Wesley Klein.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
 
-    <body>
+  <body>
+    <div class="sidenav-wrapper">
+      <a class="nav-option title" href="../index.html">Wesley<br/>Klein</a>
       <nav class="sidenav">
-        <div class="nav-title-container">
-          <a href="../index.html"><img id="title-image" src="../images/my-eyes-name.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
-        </div>
-        <div class="nav-main-container">
-          <button class="dropdown-btn nav-option" style="letter-spacing: 0.95em;">artwork</button>
-          <div class="dropdown-container clicked">
-            <button class="dropdown-btn nav-option" style="letter-spacing: 0.845em;">comics</button>
-            <div class="dropdown-container">
-              <a class="nav-option" href="cyclux.html" style="letter-spacing: 0.55em;">cyclux</a>
-              <a class="nav-option" href="branches.html" style="letter-spacing: 0.2em;">branches</a>
-            </div>
-            <a class="nav-option" href="illustrations.html" style="letter-spacing: 0.195em;">illustrations</a>
-            <a class="nav-option" href="animations.html" style="letter-spacing: 0.274em;">animations</a>
-            <a class="nav-option" href="#" style="letter-spacing: 1.2em;">photo</a>
-          </div>
-          <button class="dropdown-btn nav-option" style="letter-spacing: 0.785em;">projects</button>
+        <button class="dropdown-btn nav-option">artwork</button>
+        <div class="dropdown-container clicked">
+          <button class="dropdown-btn nav-option">comics</button>
           <div class="dropdown-container">
-            <a class="nav-option" href="../projects/linecollection.html" style="letter-spacing: 0.09em;">line collection</a>
-            <a class="nav-option" href="../projects/lifesimulator.html" style="letter-spacing: 0.115em;">life simulator</a>
-            <a class="nav-option" href="../projects/processing-sketches.html" style="letter-spacing: -0.105em;">processing sketches</a>
+            <a class="nav-option" href="cyclux.html">cyclux</a>
+            <a class="nav-option" href="branches.html">branches</a>
           </div>
-          <a class="nav-option" href="../blog.html" style="letter-spacing: 2.362em;">blog</a>
-          <a class="nav-option" href="../about-me.html" style="letter-spacing: 1.59em;">about</a>
+          <a class="nav-option" href="illustrations.html">illustrations</a>
+          <a class="nav-option" href="animations.html">animations</a>
+          <a class="nav-option" href="photo.html">photo</a>
+        </div>
+        <button class="dropdown-btn nav-option">projects</button>
+        <div class="dropdown-container">
+          <a class="nav-option" href="../projects/linecollection.html">line<br/>collection</a>
+          <a class="nav-option" href="../projects/lifesimulator.html">life<br/>simulator</a>
+          <a class="nav-option" href="../projects/processing-sketches.html">processing<br/>sketches</a>
+        </div>
+        <a class="nav-option" href="../blog.html">blog</a>
+        <a class="nav-option" href="../about-me.html">about</a>
+      </nav>
+      <a href="../index.html"><img id="title-image" src="../images/my-eyes-name-clear.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
+    </div>
+
+    <div class="topnav-wrapper">
+      <nav class="topnav">
+        <a href="../index.html"><img id="title-image" src="../images/my-eyes-name-clear.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
+        <button class="dropdown-btn nav-option"><i class="fa fa-bars"></i></button>
+        <div class="dropdown-container main-dropdown">
+          <button class="dropdown-btn nav-option">artwork</button>
+          <div class="dropdown-container clicked">
+            <button class="dropdown-btn nav-option">comics</button>
+            <div class="dropdown-container">
+              <a class="nav-option" href="cyclux.html">cyclux</a>
+              <a class="nav-option" href="branches.html">branches</a>
+            </div>
+            <a class="nav-option" href="illustrations.html">illustrations</a>
+            <a class="nav-option" href="animations.html">animations</a>
+            <a class="nav-option" href="photo.html">photo</a>
+          </div>
+          <button class="dropdown-btn nav-option">projects</button>
+          <div class="dropdown-container">
+            <a class="nav-option" href="../projects/linecollection.html">line collection</a>
+            <a class="nav-option" href="../projects/lifesimulator.html">life simulator</a>
+            <a class="nav-option" href="../projects/processing-sketches.html">processing sketches</a>
+          </div>
+          <a class="nav-option" href="../blog.html">blog</a>
+          <a class="nav-option" href="../about-me.html">about</a>
         </div>
       </nav>
+    </div>
 
-      <nav class="topnav" id="myTopnav">
-        <a href="../index.html" class="logo"><img id="title-image" src="../images/my-eyes-name.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
-        <div class="nav-main-container">
-          <button class="dropdown-btn nav-option" style="letter-spacing: 0.95em;">artwork</button>
-          <div class="dropdown-container clicked">
-            <button class="dropdown-btn nav-option" style="letter-spacing: 0.845em;">comics</button>
-            <div class="dropdown-container">
-              <a class="nav-option" href="cyclux.html" style="letter-spacing: 0.55em;">cyclux</a>
-              <a class="nav-option" href="branches.html" style="letter-spacing: 0.2em;">branches</a>
-            </div>
-            <a class="nav-option" href="#" style="letter-spacing: 0.195em;">illustrations</a>
-            <a class="nav-option" href="animations.html" style="letter-spacing: 0.274em;">animations</a>
-            <a class="nav-option active" href="photo.html" style="letter-spacing: 1.2em;">photo</a>
-          </div>
-          <button class="dropdown-btn nav-option" style="letter-spacing: 0.785em;">projects</button>
-          <div class="dropdown-container">
-            <a class="nav-option" href="../projects/linecollection.html" style="letter-spacing: 0.09em;">line collection</a>
-            <a class="nav-option" href="../projects/lifesimulator.html" style="letter-spacing: 0.115em;">life simulator</a>
-            <a class="nav-option" href="../projects/processing-sketches.html" style="letter-spacing: -0.105em;">processing sketches</a>
-          </div>
-          <a class="nav-option" href="../blog.html" style="letter-spacing: 2.362em;">blog</a>
-          <a class="nav-option" href="../about-me.html" style="letter-spacing: 1.59em;">about</a>
-        </div>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="fa fa-bars"></i>
-        </a>
-      </nav>
+    <main role="main">
+      <img class="responsive-image" src="../images/photographs/brittany-driving-1000h.JPG" 
+           alt="Photograph of a woman driving on a highway.">
+      <img class="responsive-image" src="../images/photographs/grapevine-1000h.JPG" 
+           alt="Photograph of a rainy highway, taken from the perspective of the passenger seat.">
+      <img class="responsive-image" src="../images/photographs/me-bathroom-1000h.JPG" 
+           alt="Photograph that Wesley Klein took of himself. He is standing in front of a mirror.">
+      <img class="responsive-image" src="../images/photographs/dad-grandpa-1000h.JPG" 
+           alt="Photograph of a man and his father sitting in chairs.">
+      <img class="responsive-image" src="../images/photographs/grandparents-window-1000h.JPG" 
+           alt="Photograph of a woman through a window.">
+      <img class="responsive-image" src="../images/photographs/grandma-chandelier-1000h.JPG" 
+           alt="Photograph of a woman sitting at a table.">
+      <img class="responsive-image" src="../images/photographs/megan-dad-2-1000h.JPG" 
+           alt="Photograph of a woman and her father sitting at a table.">
+      <img class="responsive-image" src="../images/photographs/slit-scanning-1-1000h.JPG" 
+           alt="A slit scan photograph of Wesley Klein.">
+      <img class="responsive-image" src="../images/photographs/slit-scanning-2-1000h.JPG" 
+           alt="A slit scan photgraph of Wesley Klein.">
+      <img class="responsive-image" src="../images/photographs/laguna-ripples-1000h.JPG" 
+           alt="Photograph of rocks under water at the beach.">
+      <img class="responsive-image" src="../images/photographs/laguna-algea-1000h.JPG" 
+           alt="Photograph of an algea pool at the beach.">
+      <img class="responsive-image" src="../images/photographs/laguna-rock-1000h.JPG" 
+           alt="Photograph of a rock in the sand at the beach.">
+    </main>
+  </body>
 
-      <main class="content">
-        <img class="responsive" src="../images/photographs/brittany-driving-1000h.JPG" alt="Photograph of a woman driving on a highway.">
-        <img class="responsive" src="../images/photographs/grapevine-1000h.JPG" alt="Photograph of a rainy highway, taken from the perspective of the passenger seat.">
-        <img class="responsive" src="../images/photographs/me-bathroom-1000h.JPG" alt="Photograph that Wesley Klein took of himself. He is standing in front of a mirror.">
-        <img class="responsive" src="../images/photographs/dad-grandpa-1000h.JPG" alt="Photograph of a man and his father sitting in chairs.">
-        <img class="responsive" src="../images/photographs/grandparents-window-1000h.JPG" alt="Photograph of a woman through a window.">
-        <img class="responsive" src="../images/photographs/grandma-chandelier-1000h.JPG" alt="Photograph of a woman sitting at a table.">
-        <img class="responsive" src="../images/photographs/megan-dad-2-1000h.JPG" alt="Photograph of a woman and her father sitting at a table.">
-        <img class="responsive" src="../images/photographs/slit-scanning-1-1000h.JPG" alt="A slit scan photograph of Wesley Klein.">
-        <img class="responsive" src="../images/photographs/slit-scanning-2-1000h.JPG" alt="A slit scan photgraph of Wesley Klein.">
-        <img class="responsive" src="../images/photographs/laguna-ripples-1000h.JPG" alt="Photograph of rocks under water at the beach.">
-        <img class="responsive" src="../images/photographs/laguna-algea-1000h.JPG" alt="Photograph of an algea pool at the beach.">
-        <img class="responsive" src="../images/photographs/laguna-rock-1000h.JPG" alt="Photograph of a rock in the sand at the beach.">
-      </main>
-      <script src="../js/dropdown.js"></script>
-      <script src="../js/mobile-menu.js"></script>
-    </body>
+  <script src="../js/dropdown.js"></script>
+  
 </html>
+
